--- a/www/templates/current.html
+++ b/www/templates/current.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Vidlis">
     <ion-content>
         <div ng-hide="videoInformation.loaded || videoInformation.loading">
-            <h3 class="noVideo">Pas de lecture en cours</h3>
+            <h3 class="noVideo paddingMenuTop">Pas de lecture en cours</h3>
         </div>
         <h3 class="videoAdded" ng-show="videoAdded">Vidéo ajoutée</h3>
         <h3 class="loading" ng-show="videoInformation.loading">Chargement en cours</h3>
