--- a/www/templates/current.html
+++ b/www/templates/current.html
@@ -1,39 +1,52 @@
 <ion-view view-title="Vidlis">
     <ion-content>
-        <div ng-hide="videoInformation.loaded || videoInformation.loading">
-            <h3 class="noVideo paddingMenuTop">Pas de lecture en cours</h3>
+        <div ng-hide="userService.isLog">
+            <h3 class="noVideo paddingMenuTop">Vous n'etes pas connecté</h3>
+            <div class="btn-login" ng-click="login()">Me connecter</div>
         </div>
-        <h3 class="videoAdded" ng-show="videoAdded">Vidéo ajoutée</h3>
-        <h3 class="loading" ng-show="videoInformation.loading">Chargement en cours</h3>
-        <div ng-show="videoInformation.loaded">
-            <div class="currentPlayed">
-                <div class="title">{{videoInformation.title}}</div>
-                <img src="{{videoInformation.img.url}}">
-                <div class="vote"><div class="like" style="width: {{videoInformation.percentLike}}%"></div></div>
-                <div class="counts">
-                    <div class="likeCount"><i class="fa fa-thumbs-up"></i>{{videoInformation.like}}</div>
-                    <div class="dislikeCount"><i class="fa fa-thumbs-down"></i>{{videoInformation.dislike}}</div>
-                </div>
-                <div class="buttonsAction">
-                    <div class="step-backward" ng-click="previewNext(0)">
-                        <i class="fa fa-step-backward"></i>
-                    </div>
-                    <div>
-                        <div class="play btn" ng-hide="videoInformation.status == 1" ng-click="updateStatus(1)"></div>
-                        <div class="pause btn" ng-show="videoInformation.status == 1" ng-click="updateStatus(2)"></div>
-                    </div>
-                    <div class="step-forward" ng-click="previewNext(1)">
-                        <i class="fa fa-step-forward"></i>
-                    </div>
-                </div>
+        <div ng-show="userService.isLog">
+            <ion-refresher
+                    on-refresh="doRefresh()">
+            </ion-refresher>
+            <div ng-hide="videoInformation.loaded || videoInformation.loading">
+                <h3 class="noVideo paddingMenuTop">Pas de lecture en cours</h3>
             </div>
-            <h3 class="suggestionsTitle">
-                Suggestions
-            </h3>
-            <div ng-show="videoSuggest.loaded">
-                <div class="currentPlayed" ng-repeat="suggest in videoSuggest.suggests" ng-click="launch(suggest.id.videoId)">
-                    <div class="title">{{suggest.snippet.title}}</div>
-                    <img src="{{suggest.snippet.thumbnails.medium.url}}">
+            <h3 class="videoAdded" ng-show="videoAdded">Vidéo ajoutée</h3>
+            <h3 class="loading" ng-show="videoInformation.loading">Chargement en cours</h3>
+            <div ng-show="videoInformation.loaded">
+                <div class="currentPlayed">
+                    <div class="title">{{videoInformation.title}}</div>
+                    <img src="{{videoInformation.img.url}}">
+                    <div class="vote"><div class="like" style="width: {{videoInformation.percentLike}}%"></div></div>
+                    <div class="counts">
+                        <div class="likeCount"><i class="fa fa-thumbs-up"></i>{{videoInformation.like}}</div>
+                        <div class="dislikeCount"><i class="fa fa-thumbs-down"></i>{{videoInformation.dislike}}</div>
+                    </div>
+                    <div class="buttonsAction">
+                        <div class="step-backward" ng-click="previewNext(0)">
+                            <i class="fa fa-step-backward"></i>
+                        </div>
+                        <div>
+                            <div class="play btn" ng-hide="videoInformation.status == 1" ng-click="updateStatus(1)">
+                                <i class="fa fa-play"></i>
+                            </div>
+                            <div class="pause btn" ng-show="videoInformation.status == 1" ng-click="updateStatus(2)">
+                                <i class="fa fa-pause"></i>
+                            </div>
+                        </div>
+                        <div class="step-forward" ng-click="previewNext(1)">
+                            <i class="fa fa-step-forward"></i>
+                        </div>
+                    </div>
+                </div>
+                <h3 class="suggestionsTitle">
+                    Suggestions
+                </h3>
+                <div ng-show="videoSuggest.loaded">
+                    <div class="suggest" ng-repeat="suggest in videoSuggest.suggests" ng-click="launch(suggest.id.videoId)">
+                        <div class="title">{{suggest.snippet.title}}</div>
+                        <img src="{{suggest.snippet.thumbnails.medium.url}}">
+                    </div>
                 </div>
             </div>
         </div>
