--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -27,6 +27,9 @@
         <ion-item nav-clear menu-close ng-show="userService.isLogged()" href="#/app/search">
           Rechercher
         </ion-item>
+          <ion-item nav-clear menu-close ng-show="userService.isLogged()" ng-click="logout()">
+              Déconnexion
+          </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
