--- a/www/css/style.css
+++ b/www/css/style.css
@@ -36,7 +36,7 @@
     color: #fff;
 }
 
-.suggestionsTitle, .currentPlayed, .videoAdded, .suggest, .loading, .noVideo {
+.suggestionsTitle, .videoAdded, .loading, .noVideo {
     z-index: 2;
     width: 320px;
     margin-left: auto;
@@ -52,6 +52,10 @@
     padding: 15px;
     text-align: center;
     color: #98a7b8;
+}
+
+h3.videoAdded, h3.loading {
+    margin-top: 20px;
 }
 
 .paddingMenuTop {
@@ -72,7 +76,7 @@
 .currentPlayed .counts {
     position: absolute;
     bottom: 3px;
-    right: 0px;
+    right: 4%;
     color: #666;
     font-size: 85%;
 }
@@ -83,10 +87,10 @@
 
 .currentPlayed .vote {
     position: absolute;
-    left: 10px;
-    bottom: 26px;
+    left: 5%;
+    bottom: 25px;
     height: 2px;
-    width: 300px;
+    width: 90%;
     border-radius: 4px;
     background-color: #ccc;
 }
@@ -115,7 +119,8 @@
     left: 50%;
     margin-left: -22px;
     position: absolute;
-    top: 100px;
+    top: 132px;
+    z-index: 100;
 }
 .buttonsAction .step-backward, .buttonsAction .step-forward {
     background: rgba(0, 0, 0, .7);
@@ -170,4 +175,9 @@
 
 .buttonsAction .btn.play i {
     margin-left: -8px;
+}
+
+
+.item-avatar, .item-avatar .item-content, .item-avatar-left, .item-avatar-left .item-content {
+    padding-left: 17px;
 }
