--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -9,7 +9,7 @@
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-nav-view name="menuContent"></ion-nav-view>
+    <ion-nav-view name="mainContent"></ion-nav-view>
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
@@ -23,6 +23,9 @@
         </ion-item>
           <ion-item nav-clear menu-close ng-show="userService.isLogged()" href="#/app/current">
               {{userService.username}}
+          </ion-item>
+          <ion-item nav-clear menu-close ng-show="userService.isLogged()" href="#/app/playlists">
+              Playlists
           </ion-item>
         <ion-item nav-clear menu-close ng-show="userService.isLogged()" href="#/app/search">
           Rechercher
