--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -3,12 +3,12 @@
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
-
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
+    <h3 class="videoAdded" ng-show="videoAdded">Vidéo ajoutée</h3>
     <ion-nav-view name="mainContent"></ion-nav-view>
   </ion-side-menu-content>
 
